# coordination-manager

./: .gitignore  CMakeLists.txt  README.md  agent_data.h  build_and_run.py  coordination_manager.cpp  coordination_manager.h  main.cpp  package.xml  system_compiler.cpp  system_compiler.h
db/: system_compiler.db
env/: halton_points.csv  zones.yaml
include/: agent_data.h  agent_state.h  coordination_manager.h  system_compiler.h
include/BT/: bt_control.h
include/BT/nodes/: action_node.h  condition_node.h  parallel_node.h  sequence_node.h
include/coordination-manager/: agent_data.h  agent_state.h  coordination_manager.h  environment_compiler.h  system_compiler.h
launch/: coordination_manager_launch.py  planner_integration_test_launch.py
python_ver/: coordination_manager.py  system_compiler.py
src/: agent_data.cpp  coordination_manager.cpp  coordination_manager_node.cpp  environment_compiler.cpp  planner_integration_test_node.cpp  planner_parser_node.cpp  system_compiler.cpp  system_compiler_node.cpp  system_compiler_test_node.cpp
src/BT/: behavior_tree_test.cpp  bt_control.cpp
src/BT/nodes/: action_node.cpp  condition_node.cpp  parallel_node.cpp  sequence_node.cpp
